Fixing the settings mini-chooser position to align with gear. I'll need to make this more dynamic when the gear menu concept is used in other places. Also calling it 'Theme' instead of 'Chosen Theme'.

--- a/bundles/org.eclipse.orion.client.core/web/css/ide.css
+++ b/bundles/org.eclipse.orion.client.core/web/css/ide.css
@@ -880,6 +880,5 @@ input {
 .settingsPanel{
 	position: relative;
 	float: right;
-	margin-right: 24px;
 	padding: 10px;
 }
